# DXRRenderer

./: .clang-format  .gitignore  CMakeLists.txt  COMPtr.h  CameraManager.cc  CameraManager.h  DXRCommon.h  DXRRenderer.h  DXRSingleton.h  DXRSingletonInstances.cc  DXRWindowRenderer.cc  DXRWindowRenderer.h  DXRWindowRendererD2D.cc  DXRWindowRendererD3D12.cc  README.md  RawImage.h  ShaderSources.h  W32Handle.h  W32Platform.h  W32Window.cc  W32Window.h  main.cc  stb_image.h
